hierarchisation des composants et ajout d'une navbar

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,7 @@
-<p>Je suis le composant shopping list</p>
+<div class="row">
+   <div class="Col-xs-10">
+        <app-shoppingListEdit></app-shoppingListEdit>
+        <hr>
+        <p>the list</p>
+   </div> 
+</div>
