--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Cooking app</a>
+      
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Shopping list</a></li>
+        </ul>
+
+        
+        <ul class="nav navbar-nav nav-r">
+            <li class="dropdown"><a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a></li>
+            <ul class="dropdown-menu">
+                <li><a href="#">Save Data</a></li>
+                <li><a href="#">Fetch Data</a></li>
+            </ul>
+        </ul>
+
+        
+      </div>
+    </div>
+</nav>
