--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,6 +5,24 @@
 }
 
 .dropdown a{
-    color:white;
+    color:black;
     text-decoration: none;
 }
+
+.bg-header{
+    background-color: lemonchiffon;
+}
+
+
+@media screen and (min-width: 992px){
+    .nav-r{
+        margin-left:3rem!important;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .nav-r{
+        margin-left:0!important;
+    }
+}
+
