--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-header">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Cooking app</a>
-      
-      <div class="collapse navbar-collapse">
+
+      <div class="navbar-header">
+
+        <button type="button" class="navbar-toggler" (click)="collapsed = !collapsed">
+        <span class="icon-bar">Menu</span>
+        </button>
+        <a routerLink="/" class="navbar-brand">Recipe Book</a>
+
+      </div>
+
+      <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
+
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Shopping list</a></li>
+          <li class="nav-item dropdown nav-r"><a class="dropdown-toggle nav-link" role="button">Manage <span class="caret"></span></a></li>
+          <ul class="dropdown-menu">
+            <li><a href="#">Save Data</a></li>
+            <li><a href="#">Fetch Data</a></li>
+          </ul>
         </ul>
-
-        
-        <ul class="nav navbar-nav nav-r">
-            <li class="dropdown"><a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a></li>
-            <ul class="dropdown-menu">
-                <li><a href="#">Save Data</a></li>
-                <li><a href="#">Fetch Data</a></li>
-            </ul>
-        </ul>
-
         
       </div>
+
+     
     </div>
 </nav>
