--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,1 +1,23 @@
-<p>Je suis shoppingListEdit</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form>
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" class="form-control">
+                </div>
+                <div class="col-sm-2">
+                    <label for="quantity">Quantity</label>
+                    <input type="number" id="quantity" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 btn-shopping-list-edit">
+                    <button class="btn btn-success" type="submit" id="">Add</button>
+                    <button class="btn btn-danger" type="submit" id="">Delete</button>
+                    <button class="btn btn-primary" type="submit" id="">Clear form</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
