--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,9 @@
 <div class="row">
-   <div class="Col-xs-10">
+   <div class="Col-lg-10">
         <app-shoppingListEdit></app-shoppingListEdit>
         <hr>
-        <p>the list</p>
+        <ul class="list-group">
+           <a href="#" class="list-group-item" style="cursor:pointer;" *ngFor="let ingredient of ingredients">{{ ingredient.name }} x {{ ingredient.quantity }}</a>
+        </ul>
    </div> 
 </div>
