--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,8 @@
       <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
 
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Shopping list</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping list</a></li>
           <li class="nav-item dropdown nav-r"><a class="dropdown-toggle nav-link" role="button">Manage <span class="caret"></span></a></li>
           <ul class="dropdown-menu">
             <li><a href="#">Save Data</a></li>
