--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,16 @@
-<p>recipe-item works!</p>
+<div class="list-group"><!-- Boucle *ngFor pour lister toutes les recettes - tableaux recettes[recette,recette...] -->
+    <a href="#" class="list-group-item-action clearfix recipe" (click)="onSelected()">
+        <div class="row">
+            <div class="col-lg-6">
+                <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+                <strong>{{ recipe.categorie }}</strong>
+                <p>{{ recipe.description }}</p>
+            </div>
+            <div class="col-lg-6">
+                <img src="{{ recipe.imagePath }}" class="img-responsive" alt="" style="max-height: 100px;">
+            </div>
+        </div>
+        
+        
+    </a>
+</div>
