--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,23 +1,22 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
             <div class="row">
-                <div class="col-sm-5 form-group">
+                <div class="col-sm-5">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #nameInput>
                 </div>
                 <div class="col-sm-2">
                     <label for="quantity">Quantity</label>
-                    <input type="number" id="quantity" class="form-control">
+                    <input type="number" id="quantity" class="form-control" #amountInput>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 btn-shopping-list-edit">
-                    <button class="btn btn-success" type="submit" id="">Add</button>
-                    <button class="btn btn-danger" type="submit" id="">Delete</button>
-                    <button class="btn btn-primary" type="submit" id="">Clear form</button>
+                    <button class="btn btn-success" (click)="onAddItem()" id="">Add</button>
+                    <button class="btn btn-danger" id="">Delete</button>
+                    <button class="btn btn-primary" id="">Clear form</button>
                 </div>
             </div>
-        </form>
+
     </div>
 </div>
