--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
    <div class="Col-lg-10">
-        <app-shoppingListEdit></app-shoppingListEdit>
+        <app-shoppingListEdit (IngredientAdded)="onIngredientAdded($event)"></app-shoppingListEdit>
         <hr>
         <ul class="list-group">
            <a href="#" class="list-group-item" style="cursor:pointer;" *ngFor="let ingredient of ingredients">{{ ingredient.name }} x {{ ingredient.quantity }}</a>
